toExponential, toFixed, and toPrecision should allow arguments up to 100 https://bugs.webkit.org/show_bug.cgi?id=199163

Patch by Alexey Shvayka <shvaikalesh@gmail.com> on 2019-09-26
Reviewed by Ross Kirsling.

JSTests:

* ChakraCore/test/Number/toString_3.baseline-jsc:
* ChakraCore/test/es5/exceptions3.baseline-jsc:
* test262/expectations.yaml: Mark 6 test cases as passing.

Source/JavaScriptCore:

Previously, the spec gave fixed range of [0,20] for Number.prototype.{toExponential,toFixed} argument and
range of [1,21] for Number.prototype.toPrecision argument, but allowed implementations to permit a larger range.
Historically, only SpiderMonkey accepted a larger range, and other implementations threw a RangeError outside the range.
Later the spec was changed (see https://github.com/tc39/ecma262/pull/857) to specify the SpiderMonkey behavior.

* runtime/NumberPrototype.cpp:
(JSC::numberProtoFuncToExponential): Accept arguments between 0 and 100.
(JSC::numberProtoFuncToFixed): Accept arguments between 0 and 100.
(JSC::numberProtoFuncToPrecision): Accept arguments between 1 and 100.
(JSC::getIntegerArgumentInRange): Inline to improve readability.

Source/WTF:

Increase size of NumberToStringBuffer: <21 digits> + decimal point + <100 digits> + null char = 123.
Increase kMaxFixedDigitsAfterPoint to make Number.prototype.toFixed work with arguments up to 100.
Also update other constants to their correct values.

* wtf/dtoa.h:
* wtf/dtoa/double-conversion.cc:
* wtf/dtoa/double-conversion.h:

Tools:

Adjust StringNumberFixedWidth test due to lowering kMaxFixedDigitsBeforePoint.

* TestWebKitAPI/Tests/WTF/WTFString.cpp:

LayoutTests:

* js/dom/number-tofixed-expected.txt:
* js/dom/number-toprecision-expected.txt:
* js/dom/script-tests/number-tofixed.js:
* js/dom/script-tests/number-toprecision.js:
* js/kde/Number-expected.txt:
* js/kde/script-tests/Number.js:
* js/number-toExponential-expected.txt:
* js/script-tests/number-toExponential.js:

Canonical link: https://commits.webkit.org/215822@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250389 268f45cc-cd09-0410-ab3c-d52691b4dbfc